--- a/Kursova/appsettings.json
+++ b/Kursova/appsettings.json
@@ -10,11 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "BraintreeGateway": {
-    "Environment": "SANDBOX",
-    "MerchantId": "cgvsqrzywym47ggv",
-    "PublicKey": "7xcb35rgk2fyn2c6",
-    "PrivateKey": "9d4646bcec1463b98737d52da75d5e8f"
-  },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "http://localhost:44363",
+    "ValidIssuer": "http://localhost:44363",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  }
 }
