--- a/Kursova/Kursova.csproj
+++ b/Kursova/Kursova.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="bootstrap" Version="5.1.2" />
     <PackageReference Include="bootstrap.sass" Version="5.1.2" />
     <PackageReference Include="Braintree" Version="5.10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
